--- a/templates/companies.html
+++ b/templates/companies.html
@@ -1,11 +1,6 @@
 {% extends "main.html" %}
 {% block content %}
-<div class="top">
-	<div class="left"> </div>
-	<div class="right">
-		<a href="{{url_for('showLogin')}}">Click Here to Login </a>
-	</div>
-</div>
+{% include "header.html" %}
 
 <div class="row">
 	<div>
